# 207

./: .gitignore  CMakeLists.txt  DogController.cpp  DroneController.cpp  GimbalController.cpp  README.md  SerialManager.cpp  main.cpp  speaker_utils.cpp
config/: config.yaml
include/: DogController.h  DroneController.h  GimbalController.h  SerialManager.h  geo_utils.h  global_common.h  speaker_utils.h
sdk/: std_common.h  std_protocol_sdk.c  std_protocol_sdk.h
speaker_lib/mav_ftp_pro/lib/cmake/MAVFTP_Pro/: MAVFTP_ProTargets.cmake
speaker_lib/mav_ftp_pro/lib/pkgconfig/: mavftp_pro.pc
speaker_lib/mavftp_pro/lib/cmake/MAVFTP_Pro/: MAVFTP_ProConfig.cmake  MAVFTP_ProTargets-release.cmake
speaker_lib/mavsdk/include/mavsdk/custom_plugins/custom_camera/: custom_camera.h
speaker_lib/mavsdk/include/mavsdk/mavlink/custom/: custom.h  testsuite.h
speaker_lib/mavsdk/include/mavsdk/mavlink/minimal/: mavlink.h  version.h
speaker_lib/mavsdk/include/mavsdk/mavlink/standard/: mavlink.h  standard.h
speaker_lib/mavsdk/lib/cmake/MAVSDK/: MAVSDKConfigVersion.cmake  MAVSDKTargets.cmake
speaker_lib/mavsdk/lib/pkgconfig/: mavsdk.pc
speaker_lib/speaker_interface/include/: speaker_interface.h
